--- a/views/include/shop/product.ejs
+++ b/views/include/shop/product.ejs
@@ -114,8 +114,44 @@
     </div>
 </div>
 <script src="/js/fetch_request/storePage.js"></script>
-<script src="/js/fetch_request/shop/productUploadImg.js"></script>
 <script>
+    const listenerFns = {
+        addblur: (e) => {
+            e.preventDefault();
+            e.stopPropagation();
+            document.getElementById('thumbnail').classList.add('blur');
+        },
+        rmblur: (e) => {
+            e.preventDefault();
+            e.stopPropagation();
+            document.getElementById('thumbnail').classList.remove('blur');
+        }
+    };
+
+    function dropTrigger(e) {
+        let dt = e.dataTransfer;
+        let files = dt.files;
+
+        changeThumbnail(files);
+    }
+
+    function changeThumbnail(files) {
+        document.getElementById('imgInp').files = files;
+        const [file] = files;
+        if (file) {
+            document.getElementById('thumbnail').src = URL.createObjectURL(file);
+        }
+    }
+
+    const dropArea = document.getElementById('drop-area');
+    dropArea.addEventListener('drop', dropTrigger, false);
+    ['dragenter', 'dragover'].forEach(eventName => {
+        dropArea.addEventListener(eventName, listenerFns.addblur, false);
+    });
+    ['dragleave', 'drop'].forEach(eventName => {
+        dropArea.addEventListener(eventName, listenerFns.rmblur, false);
+    });
+
     function cancel() {
         Swal.fire({
             title: '確定要取消？',
