--- a/views/include/shop/profile.ejs
+++ b/views/include/shop/profile.ejs
@@ -37,6 +37,7 @@
             <div class="card-body justify-content-between">
                 <h4 id="name" class="card-title d-inline-block"></h4>
                 <button id="begin" class="btn btn-warning float-right" onclick="location.href='/shop/bussiness'">開始營業</button>
+                <button id="history" class="btn btn-primary float-right" onclick="location.href='/shop/history'">訂單紀錄</button>
             </div>
             <div class="form-group">
                 <textarea class="form-control" rows="3" id="describe" placeholder="最多 100 字" name="describe" disabled></textarea>
