--- a/models/member/email.ejs
+++ b/models/member/email.ejs
@@ -135,7 +135,7 @@
 
                                                                         <!--<img align="center" border="0" src="images/image-2.png" alt="Image" title="Image" style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: inline-block !important;border: none;height: auto;float: none;width: 23%;max-width: 133.4px;"
                                                                             width="133.4" />-->
-                                                                        <h1>Hello 中原</h1>
+                                                                        <h1>foodone</h1>
 
                                                                     </td>
                                                                 </tr>
@@ -211,7 +211,7 @@
                                                         <td style="overflow-wrap:break-word;word-break:break-word;padding:0px 33px 10px;font-family:'Montserrat',sans-serif;" align="left">
 
                                                             <div style="color: #686d6d; line-height: 210%; text-align: center; word-wrap: break-word;">
-                                                                <p style="line-height: 210%; font-size: 14px;"><span style="font-size: 14px; line-height: 29.4px;">連結只能使用一次，且將在短時間內失效<br />如果你沒有使用 Hello中原-外送服務 請忽略此封信件</span></p>
+                                                                <p style="line-height: 210%; font-size: 14px;"><span style="font-size: 14px; line-height: 29.4px;">連結只能使用一次，且將在短時間內失效<br />如果你沒有使用 foodone 外送服務 請忽略此封信件</span></p>
                                                             </div>
 
                                                         </td>
