--- a/views/include/navbar.ejs
+++ b/views/include/navbar.ejs
@@ -21,7 +21,7 @@
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top" style="z-index: 2">
     <!-- Brand -->
     <li class="navbar-brand">
-        <a class="openbtn" id="main" href="javascript:openNav()">☰</a> Fordon
+        <a class="openbtn" id="main" href="javascript:openNav()">☰</a> foodone
     </li>
 </nav>
 <script>
