async await collection.find

--- a/views/include/shop/addition/update.ejs
+++ b/views/include/shop/addition/update.ejs
@@ -1,5 +1,6 @@
 <script src="/js/fetch_request/shop/oneProduct.js"></script>
 <script src="/js/fetch_request/shop/updateProduct.js"></script>
+<script src="/js/fetch_request/shop/productUploadImg.js"></script>
 <script>
     document.getElementById('submit').innerText = "更新";
     const id = decodeURI(location.href.split('?')[1]);
