--- a/views/include/shop/profile.ejs
+++ b/views/include/shop/profile.ejs
@@ -616,7 +616,7 @@
         if (data.result.last_update) document.getElementById('update').value = new Date(data.result.last_update).toLocaleString();
         if (data.result.thumbnail)
             document.getElementById('thumbnail').src = `${data.result.thumbnail}?lastmod=${data.result.last_update}`;
-        if (data.result.url) await getProductFn(data.result.url);
+        if (data.result.url && data.result.product) await getProductFn(data.result.url);
         return data.result;
     }
 
