--- a/views/include/login.ejs
+++ b/views/include/login.ejs
@@ -5,7 +5,7 @@
                 <img class="profile-img" src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=120" alt="">
                 <form class="form-signin" autocomplete="off">
                     <button class="btn btn-dark btn-block" onclick="googleLogin()">
-                        <img class="google-icon mr-3" src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg"/>Google 登入</button>
+                        <img class="google-icon mr-3" src="/images/Google__G__Logo.svg"/>Google 登入</button>
                 </form>
             </div>
         </div>
