--- a/views/include/login.ejs
+++ b/views/include/login.ejs
@@ -2,7 +2,7 @@
     <div class="row h-100 justify-content-center align-items-center">
         <div class="col-sm-6 col-md-6 animated bounceInDown">
             <div class="account-wall">
-                <img class="profile-img" src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=120" alt="">
+                <img class="profile-img" src="/images/fordon.png" alt="">
                 <form class="form-signin" autocomplete="off">
                     <button class="btn btn-dark btn-block" onclick="googleLogin()">
                         <img class="google-icon mr-3" src="/images/Google__G__Logo.svg"/>Google 登入</button>
