--- a/views/include/shop/bussiness/index.ejs
+++ b/views/include/shop/bussiness/index.ejs
@@ -201,7 +201,7 @@
         unaccept.innerHTML = '';
         accepted.innerHTML = '';
 
-        for (let i = 0; i < order.length; i++) {
+        for (let i = order.length-1; i >=0; i--) {
             const orderTemplate = document.getElementById('orderTemplate').cloneNode(true);
             const unacceptBtns = document.importNode(unacceptBtnsTemplate.content, true);
             const acceptedBtns = document.importNode(acceptedBtnsTemplate.content, true);
