--- a/views/include/login.ejs
+++ b/views/include/login.ejs
@@ -1,14 +1,22 @@
+<meta name="appleid-signin-client-id" content="com.FORDON.flutterdemo02">
+<meta name="appleid-signin-scope" content="email">
+<meta name="appleid-signin-redirect-uri" content="/member/apple/callback">
+<meta name="appleid-signin-state" content="">
 <div class="container h-100">
     <div class="row h-100 justify-content-center align-items-center">
         <div class="col-sm-6 col-md-6 animated bounceInDown">
             <div class="account-wall">
                 <img class="profile-img" src="/images/fordon.png" alt="">
                 <form class="form-signin" autocomplete="off">
-                    <button class="btn btn-dark btn-block" onclick="googleLogin()">
-                        <img class="google-icon mr-3" src="/images/Google__G__Logo.svg"/>Google 登入</button>
+                    <div class="form-group">
+                        <button class="btn btn-dark btn-block" onclick="googleLogin()">
+                            <img class="google-icon mr-3" src="/images/Google__G__Logo.svg"/>Google 登入</button>
+                    </div>
+                    <div id="appleid-signin" class="signin-button" data-color="black" data-border="true" data-type="sign-in" style="height: 60px;"></div>
                 </form>
             </div>
         </div>
     </div>
 </div>
 <script src="/js/fetch_request/login.js"></script>
+<script type="text/javascript" src="https://appleid.cdn-apple.com/appleauth/static/jsapi/appleid/1/zh_TW/appleid.auth.js"></script>
