--- a/views/include/login.ejs
+++ b/views/include/login.ejs
@@ -1,6 +1,6 @@
 <meta name="appleid-signin-client-id" content="com.FORDON.flutterdemo02">
 <meta name="appleid-signin-scope" content="email">
-<meta name="appleid-signin-redirect-uri" content="/member/apple/callback">
+<meta name="appleid-signin-redirect-uri" content="https://foodone.glitch.me/member/apple/callback">
 <meta name="appleid-signin-state" content="">
 <div class="container h-100">
     <div class="row h-100 justify-content-center align-items-center">
