--- a/views/include/login.ejs
+++ b/views/include/login.ejs
@@ -7,9 +7,9 @@
         <div class="col-sm-6 col-md-6 animated bounceInDown">
             <div class="account-wall">
                 <img class="profile-img" src="/images/fordon.png" alt="">
-                <form class="form-signin" autocomplete="off">
+                <form class="form-signin" autocomplete="off" action="/member/google/login" method="POST">
                     <div class="form-group">
-                        <button class="btn btn-dark btn-block" onclick="googleLogin()">
+                        <button class="btn btn-dark btn-block" onclick="submit()">
                             <img class="google-icon mr-3" src="/images/Google__G__Logo.svg"/>Google 登入</button>
                     </div>
                     <div id="appleid-signin" class="signin-button" data-color="black" data-border="true" data-type="sign-in" style="height: 60px;"></div>
