--- a/views/include/mail.ejs
+++ b/views/include/mail.ejs
@@ -7,7 +7,7 @@
                     <p>已發送驗證碼至您的信箱</p>
                     <button class="btn btn-lg btn-primary btn-block" onclick="remail()">重新請求驗證碼</button>
                 </form>
-                <a href="/admin/register" class="text-right new-account mr-4">註冊新帳號</a>
+                <!-- <a href="/admin/register" class="text-right new-account mr-4">註冊新帳號</a> -->
             </div>
         </div>
     </div>
