remove apple login

--- a/views/include/login.ejs
+++ b/views/include/login.ejs
@@ -12,7 +12,7 @@
                         <button class="btn btn-dark btn-block" onclick="submit()">
                             <img class="google-icon mr-3" src="/images/Google__G__Logo.svg"/>Google 登入</button>
                     </div>
-                    <div id="appleid-signin" class="signin-button" data-color="black" data-border="true" data-type="sign-in" style="height: 60px;"></div>
+                    <!-- <div id="appleid-signin" class="signin-button" data-color="black" data-border="true" data-type="sign-in" style="height: 60px;"></div> -->
                 </form>
             </div>
         </div>
